fixed blank spacing on blog details page

--- a/src/app/pages/blog-post/blog-post.page.scss
+++ b/src/app/pages/blog-post/blog-post.page.scss
@@ -21,3 +21,11 @@
 .wiof-blog-col {
   min-height: 500px;
 }
+
+.blog-container {
+  border-radius: 10px;
+  box-shadow: lightgrey 5px 5px 25px;
+  padding: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
